# botspot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LLM_RULES.md  Makefile  README.md  botspot_101.md  botspot_components_examples_todo.md  example.env  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini
.github/: dependabot.yml
.github/workflows/: main.yml  pr-checks.yml  publish.yml  push-checks.yml
botspot/: __init__.py  chat_binder.py  commands_menu.py  contact_manager.py  i18n.py  llm_provider.py  trial_mode.py  user_data.py  user_interactions.py
botspot/components/: DEV_README.md  __init__.py  ask_user_handler.py  bot_commands_menu.py  bot_info.py  error_handler.py  event_scheduler.py  mongo_database.py  multi_forward_handler.py  print_bot_url.py  readme.md  single_user_mode.py  telethon_manager.py  trial_mode.py  user_data.py
botspot/components/data/: access_control.py  (+3 more)
botspot/core/: __init__.py  bot_manager.py  botspot_settings.py  dependency_manager.py  errors.py  nbl_settings.py
botspot/utils/: __init__.py  admin_filter.py  cache_utils.py  chat_utils.py  deps_getters.py  formatting_utils.py  internal.py  llm_key_check.py  llm_utils.py  send_safe.py  text_utils.py  unsorted.py  user_ops.py
data_models/: user.py
dev/: check_llm_provider.py  new_component.txt  research_structured_output.py  scratch.ipynb  todo.md  todo_04_Jan.md  todo_06_Jan.md  todo_16_Mar.md  todo_17_Mar.md  todo_19_Jan.md  todo_24_Mar.md  todo_25_Jan.md  todo_26_Jan.md  todo_27_Dec.md  todo_new_components.md  workalong.md  workalong_0_new_components.md  workalong_2_llm_utils.md  workalong_chat_fetcher.md  workalong_llm_provider.md  workalong_llm_utils.md  workalong_new_components.md
dev/archive_2/: check_llm_provider.py  import_notes.md  new_component.txt  research_structured_output.py  scratch.ipynb  todo.md  todo_13_Apr.md  workalong_3_queue_manager.md
dev/ideas/: bots.md  features.md
dev/notes/: ask_user_handler.md  tasks.md
dev/workalong_auto_archive/: spec.md  workalong.md
dev/workalong_bound_llm_queue/: spec.md
dev/workalong_chat_binder/: workalong.md
dev/workalong_chat_fetcher/: spec.md  workalong.md
dev/workalong_contact_manager/: spec.md  workalong.md
dev/workalong_context_builder/: spec.md  workalong.md
dev/workalong_llm_utils/: spec.md  workalong.md
dev/workalong_queue_manager/: spec.md
dev/workalong_settings_menu/: spec.md
dev/workalong_subscription_manager/: spec.md
docs/: index.md
examples/: cookbook.md
examples/base_bot/: __init__.py  bot.py  router.py
examples/basic_bot/: README.md  bot.py  sample.env
examples/components_examples/: README.md  s3_storage_example.py
scripts/: version_patch.sh
tests/: conftest.py  test_imports.py
tests/core/: test_bot_manager.py  test_botspot_settings.py  test_dependency_manager.py
tests/utils/: test_admin_filter.py  test_deps_getters.py  test_formatting_utils.py  test_send_safe.py  test_text_utils.py  test_unsorted.py  test_user_ops.py
(+161 files in other folders)
