[project]
name = "botspot"
version = "0.10.32"
description = ""
readme = "README.md"
authors = [
    {name = "Petr Lavrov", email = "me@petrlavrov.com"},
]
requires-python = "<4.0,>=3.12"

dependencies = [
    "loguru>=0.7",
    "toml>=0.10",
    "python-dotenv",
    "aiogram>=3.19",
    "pydantic-settings<3.0.0,>=2.6.0",
    "pydantic<3.0,>=2.10",
]

[dependency-groups]

extras = [
    "apscheduler<4.0.0,>=3.10.4",
    "pymongo>=4.9",
    "litellm<2.0,>=1.63",
    "motor<4.0.0,>=3.6.0",
    "telethon<2.0.0,>=1.38.1",
    "aioboto3<15.0.0,>=14.1.0",
    "mistune<4.0.0,>=3.1.3",
    "calmlib @ git+https://github.com/calmmage/calmlib.git@main",
    "pyrogram @ git+https://github.com/KurimuzonAkuma/pyrogram.git@master",
]
test = [
    "pytest>=8.3.5",
    "isort<7.0.0,>=6.0.0",
    "vulture<3.0,>=2.14",
    "pytest-cov<7.0.0,>=6.1.1",
    "pytest-asyncio<2.0.0,>=1.0.0",
    "pytest-mock<4.0.0,>=3.14.1",
    #pytest-mongodb = "*"
    "pyupgrade<4.0.0,>=3.20.0",
    "pyright<2.0.0,>=1.1.401",
    "ruff<1.0.0,>=0.11.12",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
dev = [
    "jupyter>=1.0.0",
    "pre-commit>=3.8.0",
    "tqdm",
    #jupyter-nbextensions-configurator = "*"
    #jupyter_contrib_nbextensions = "*"

    ## data analysis, research
    #pandas = ">=2.0.0"          # Data manipulation and analysis
    #seaborn = "*"               # Statistical data visualization
    #bokeh = "*"                 # Interactive visualizations
    #matplotlib = "*"            # Plotting library
    #numpy = "*"                 # Numerical computing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Allows to install dependencies directly from github - e.g. my personal libraries
[tool.hatch.metadata]
allow-direct-references = true

# Define package properly
[tool.hatch.build.targets.wheel]
packages = ["botspot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests, requiring external services",
]
xvs = true
addopts = "--tb=short --no-header -v"

[tool.coverage.run]
source = ["botspot"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 49
show_missing = true

[tool.ruff]
line-length = 100

[template]
version = "0.3.0"  # optimize pyproject dependencies
url = "https://github.com/calmmage/python-project-template.git"
author = "Petr Lavrov <petrlavrov@calmmage.com>"
description = "A template for creating a bot using calmapp and bot-lib"
